<resources>
    <string name="app_name">Lute for Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lute for Android</string>
    <string name="nav_header_subtitle">Language Learning with Lute</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_reader">Reader</string>
    <string name="menu_books">Books</string>
    <string name="menu_terms">Terms</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_about">About</string>
    <string name="app_version">App Version 0.5.31</string>
    <string-array name="playback_rates">
        <item>0.5x</item>
        <item>0.6x</item>
        <item>0.7x</item>
        <item>0.8x</item>
        <item>0.9x</item>
        <item>1.0x</item>
        <item>1.1x</item>
        <item>1.2x</item>
        <item>1.3x</item>
        <item>1.4x</item>
        <item>1.5x</item>
        <item>1.6x</item>
        <item>1.7x</item>
        <item>1.8x</item>
        <item>1.9x</item>
        <item>2.0x</item>
    </string-array>
</resources>
